// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account renders correctly 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View>
    <SafeAreaView>
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "backgroundColor": "#FFFFFF",
            "elevation": 1,
            "flexDirection": "row",
            "height": 62,
            "justifyContent": "space-between",
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 0.5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 0.8,
          }
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <svg
            fill="none"
            height="32"
            viewBox="0 0 32 32"
            width="32"
          >
            <line
              stroke="#2E3338"
              strokeLinecap="round"
              strokeWidth="2.5"
              x1="7.25"
              x2="24.75"
              y1="9.75"
              y2="9.75"
            />
            <line
              stroke="#2E3338"
              strokeLinecap="round"
              strokeWidth="2.5"
              x1="7.25"
              x2="24.75"
              y1="15.75"
              y2="15.75"
            />
            <line
              stroke="#2E3338"
              strokeLinecap="round"
              strokeWidth="2.5"
              x1="7.25"
              x2="24.75"
              y1="21.75"
              y2="21.75"
            />
          </svg>
        </View>
        <View
          style={
            Object {
              "marginBottom": 13,
            }
          }
        >
          <svg
            fill="none"
            height={25}
            style={Object {}}
            viewBox="0 0 25 25"
            width={25}
          >
            <path
              d="M9.86842 22.3684C13.8653 22.3684 17.1053 19.1284 17.1053 15.1316C17.1053 11.1348 13.8653 7.89476 9.86842 7.89476C5.87158 7.89476 2.63158 11.1348 2.63158 15.1316C2.63158 19.1284 5.87158 22.3684 9.86842 22.3684ZM9.86842 25C4.41842 25 0 20.5816 0 15.1316C0 9.6816 4.41842 5.26318 9.86842 5.26318C15.3184 5.26318 19.7368 9.6816 19.7368 15.1316C19.7368 20.5816 15.3184 25 9.86842 25Z"
              fill="#FBCC5C"
              style={Object {}}
            />
            <path
              d="M15.1316 17.1053C19.1284 17.1053 22.3684 13.8653 22.3684 9.86842C22.3684 5.87158 19.1284 2.63158 15.1316 2.63158C11.1348 2.63158 7.89476 5.87158 7.89476 9.86842C7.89476 13.8653 11.1348 17.1053 15.1316 17.1053ZM15.1316 19.7368C9.6816 19.7368 5.26318 15.3184 5.26318 9.86842C5.26318 4.41842 9.6816 0 15.1316 0C20.5816 0 25 4.41842 25 9.86842C25 15.3184 20.5816 19.7368 15.1316 19.7368Z"
              fill="#42D689"
              style={Object {}}
            />
            <path
              d="M15.4577 19.7369C16.1419 18.9077 16.6324 17.9361 16.8932 16.8932C17.9361 16.6324 18.9077 16.1421 19.7369 15.4579C19.699 16.6658 19.439 17.8563 18.9695 18.9698C17.8561 19.439 16.6656 19.6992 15.4577 19.7369ZM8.10687 8.10687C7.06397 8.36766 6.09239 8.85792 5.26318 9.54213C5.30108 8.33424 5.56108 7.14371 6.03055 6.03029C7.14397 5.56108 8.3345 5.30082 9.54239 5.26318C8.85818 6.09239 8.36766 7.06397 8.10687 8.10687Z"
              fill="#5EA33B"
              style={Object {}}
            />
          </svg>
        </View>
        <View
          style={
            Object {
              "width": 45,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "paddingBottom": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "center",
                "marginBottom": 10,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "backgroundColor": "#7AD6FE",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                      },
                      Object {
                        "fontSize": 20,
                      },
                    ]
                  }
                >
                  J
                </Text>
              </View>
            </View>
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "marginHorizontal": 20,
                    "paddingTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              John Doe
            </Text>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                      "marginRight": 4,
                    },
                  ]
                }
              >
                🇺🇸
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#9CA4A9",
                    },
                  ]
                }
              >
                +1 (415) 555-6666
              </Text>
            </View>
          </View>
        </View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Light",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "marginTop": 8,
                }
              }
            >
              0x0000000000000000000000000000000000007E57
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#EEEEEE",
            "borderTopWidth": 1,
            "flex": 1,
            "paddingLeft": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                backupKeyFlow6:backupAndRecovery
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                nuxVerification2:getVerified
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                invite
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                editProfile
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                analytics
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                dataSaver
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                languageSettings
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                localCurrencySetting
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                licenses
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                support
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "marginTop": 30,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              }
            }
          >
            version appVersion
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "textDecorationLine": "underline",
                  },
                  undefined,
                ]
              }
            >
              testFaqLink
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "textDecorationLine": "underline",
                  },
                  undefined,
                ]
              }
            >
              termsOfServiceLink
            </Text>
          </View>
        </View>
      </View>
    </SafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`Account renders correctly when dev mode active 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View>
    <SafeAreaView>
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "backgroundColor": "#FFFFFF",
            "elevation": 1,
            "flexDirection": "row",
            "height": 62,
            "justifyContent": "space-between",
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 0.5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 0.8,
          }
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <svg
            fill="none"
            height="32"
            viewBox="0 0 32 32"
            width="32"
          >
            <line
              stroke="#2E3338"
              strokeLinecap="round"
              strokeWidth="2.5"
              x1="7.25"
              x2="24.75"
              y1="9.75"
              y2="9.75"
            />
            <line
              stroke="#2E3338"
              strokeLinecap="round"
              strokeWidth="2.5"
              x1="7.25"
              x2="24.75"
              y1="15.75"
              y2="15.75"
            />
            <line
              stroke="#2E3338"
              strokeLinecap="round"
              strokeWidth="2.5"
              x1="7.25"
              x2="24.75"
              y1="21.75"
              y2="21.75"
            />
          </svg>
        </View>
        <View
          style={
            Object {
              "marginBottom": 13,
            }
          }
        >
          <svg
            fill="none"
            height={25}
            style={Object {}}
            viewBox="0 0 25 25"
            width={25}
          >
            <path
              d="M9.86842 22.3684C13.8653 22.3684 17.1053 19.1284 17.1053 15.1316C17.1053 11.1348 13.8653 7.89476 9.86842 7.89476C5.87158 7.89476 2.63158 11.1348 2.63158 15.1316C2.63158 19.1284 5.87158 22.3684 9.86842 22.3684ZM9.86842 25C4.41842 25 0 20.5816 0 15.1316C0 9.6816 4.41842 5.26318 9.86842 5.26318C15.3184 5.26318 19.7368 9.6816 19.7368 15.1316C19.7368 20.5816 15.3184 25 9.86842 25Z"
              fill="#FBCC5C"
              style={Object {}}
            />
            <path
              d="M15.1316 17.1053C19.1284 17.1053 22.3684 13.8653 22.3684 9.86842C22.3684 5.87158 19.1284 2.63158 15.1316 2.63158C11.1348 2.63158 7.89476 5.87158 7.89476 9.86842C7.89476 13.8653 11.1348 17.1053 15.1316 17.1053ZM15.1316 19.7368C9.6816 19.7368 5.26318 15.3184 5.26318 9.86842C5.26318 4.41842 9.6816 0 15.1316 0C20.5816 0 25 4.41842 25 9.86842C25 15.3184 20.5816 19.7368 15.1316 19.7368Z"
              fill="#42D689"
              style={Object {}}
            />
            <path
              d="M15.4577 19.7369C16.1419 18.9077 16.6324 17.9361 16.8932 16.8932C17.9361 16.6324 18.9077 16.1421 19.7369 15.4579C19.699 16.6658 19.439 17.8563 18.9695 18.9698C17.8561 19.439 16.6656 19.6992 15.4577 19.7369ZM8.10687 8.10687C7.06397 8.36766 6.09239 8.85792 5.26318 9.54213C5.30108 8.33424 5.56108 7.14371 6.03055 6.03029C7.14397 5.56108 8.3345 5.30082 9.54239 5.26318C8.85818 6.09239 8.36766 7.06397 8.10687 8.10687Z"
              fill="#5EA33B"
              style={Object {}}
            />
          </svg>
        </View>
        <View
          style={
            Object {
              "width": 45,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "paddingBottom": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "center",
                "marginBottom": 10,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "backgroundColor": "#7AD6FE",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                      },
                      Object {
                        "fontSize": 20,
                      },
                    ]
                  }
                >
                  J
                </Text>
              </View>
            </View>
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "marginHorizontal": 20,
                    "paddingTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              John Doe
            </Text>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                      "marginRight": 4,
                    },
                  ]
                }
              >
                🇺🇸
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#9CA4A9",
                    },
                  ]
                }
              >
                +1 (415) 555-6666
              </Text>
            </View>
          </View>
        </View>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Light",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "marginTop": 8,
                }
              }
            >
              0x0000000000000000000000000000000000007E57
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#EEEEEE",
            "borderTopWidth": 1,
            "flex": 1,
            "paddingLeft": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                backupKeyFlow6:backupAndRecovery
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                nuxVerification2:getVerified
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                invite
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                editProfile
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                analytics
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                dataSaver
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                languageSettings
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                localCurrencySetting
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                licenses
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#EEEEEE",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 15,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                support
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <svg
                height={16}
                style={Object {}}
                viewBox="0 0 15 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                  fill="#42D689"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "marginHorizontal": 10,
            "padding": 15,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "margin": 4,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text>
              Toggle verification done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "margin": 4,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text>
              Reset app opened state
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "margin": 4,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text>
              Reset backup state
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "margin": 4,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text>
              Show Debug Screen
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "margin": 4,
            }
          }
        >
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text>
              Trigger a crash
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "marginTop": 30,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              }
            }
          >
            version appVersion
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "textDecorationLine": "underline",
                  },
                  undefined,
                ]
              }
            >
              testFaqLink
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingBottom": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "textDecorationLine": "underline",
                  },
                  undefined,
                ]
              }
            >
              termsOfServiceLink
            </Text>
          </View>
        </View>
      </View>
    </SafeAreaView>
  </View>
</RCTScrollView>
`;
